Permissions tooltips information extended

--- a/code/dev/parts/shared/permissions/permissions.html
+++ b/code/dev/parts/shared/permissions/permissions.html
@@ -8,7 +8,7 @@
             <input ng-disabled="readOnly" type="checkbox" ng-checked="model.permissions.read_only" name="permissions_read_only"
                 class="inline-block" ng-model="model.permissions.read_only"> Read Only
             <label for="permissions_read_only" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Group has read-only access to resources (Users, Accounts, Domains etc...)">
+                uib-popover="Grant read-only access to resources (Users, Accounts, Domains etc...), dashboard management is still available for users.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
@@ -16,7 +16,7 @@
             <input ng-disabled="readOnly" type="checkbox" ng-checked="model.permissions.enforce_2fa" name="permissions_enforce_2fa" class="inline-block"
                 ng-model="model.permissions.enforce_2fa"> Enforce 2FA
             <label for="permissions_enforce_2fa" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Enforce Two-Factor authentication.">
+                uib-popover="Enforce Two-Factor authentication for users. When enabled, users without 2FA setup will be redirected to 2FA setup page and will not be able to use the portal without setting up 2FA.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
@@ -24,7 +24,7 @@
             <input ng-disabled="readOnly" ng-checked="model.permissions.portal_login" type="checkbox" name="permissions_portal_login"
                 class="inline-block" ng-model="model.permissions.portal_login"> Portal Login
             <label for="permissions_portal_login" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow group to login to the portal.">
+                uib-popover="Allow users to login to the portal. If disabled, users will not be able to log into the portal but will be able to make API calls.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
@@ -32,7 +32,7 @@
             <input ng-disabled="readOnly" ng-checked="model.permissions.API_access" type="checkbox" name="permissions_API_access" class="inline-block"
                 ng-model="model.permissions.API_access"> API Access
             <label for="permissions_API_access" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow group to access the API's endpoints.">
+                uib-popover="Allow API Keys to access the API.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
@@ -42,7 +42,7 @@
             <input ng-disabled="readOnly" ng-checked="model.permissions.dashboards" type="checkbox" name="permissions_dashboards" class="inline-block"
                 ng-model="model.permissions.dashboards"> Dashboards
             <label for="permissions_dashboards" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow group to manage dashboards.">
+                uib-popover="Allow users to manage dashboards.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
@@ -51,7 +51,7 @@
                 <input ng-disabled="readOnly" ng-checked="model.permissions.mobile_apps.access" type="checkbox" name="permissions_mobile_apps"
                     class="inline-block bg-dark" ng-model="model.permissions.mobile_apps.access"> Mobile Apps
                 <label for="permissions_mobile_apps" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                    uib-popover="Allow group to manage mobile apps.">
+                    uib-popover="Allow users to manage mobile apps.">
                     <i class="fa fa-question-circle"></i>
                 </label>
             </span>
@@ -81,7 +81,7 @@
             <input ng-disabled="readOnly" ng-checked="model.permissions.mobile_analytics" type="checkbox" name="permissions_mobile_analytics"
                 class="inline-block" ng-model="model.permissions.mobile_analytics"> Mobile Analytics
             <label for="permissions_mobile_analytics" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow group to access mobile analytics.">
+                uib-popover="Allow users to access mobile analytics.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
@@ -89,7 +89,7 @@
             <span class="{{model.permissions.domains.access ? 'bg-dark' : null}}">
                 <input ng-disabled="readOnly" ng-checked="model.permissions.domains.access" type="checkbox" name="permissions_domains" class="inline-block bg-dark"
                     ng-model="model.permissions.domains.access"> Domains
-                <label for="permissions_domains" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Allow group to manage domains.">
+                <label for="permissions_domains" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Allow users to manage domains.">
                     <i class="fa fa-question-circle"></i>
                 </label>
             </span>
@@ -120,7 +120,7 @@
                 <input ng-disabled="readOnly" ng-checked="model.permissions.cache_purge.access" type="checkbox" name="permissions_cache_purge"
                     class="inline-block bg-dark" ng-model="model.permissions.cache_purge.access"> Cache Purge
                 <label for="permissions_cache_purge" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                    uib-popover="Allow group to purge cache.">
+                    uib-popover="Allow users to purge cache.">
                     <i class="fa fa-question-circle"></i>
                 </label>
             </span>
@@ -151,7 +151,7 @@
                 <input ng-disabled="readOnly" ng-checked="model.permissions.web_analytics.access" type="checkbox" name="permissions_web_analytics"
                     class="inline-block bg-dark" ng-model="model.permissions.web_analytics.access"> Web Analytics
                 <label for="permissions_web_analytics" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                    uib-popover="Allow group to access web analytics.">
+                    uib-popover="Allow users to access web analytics.">
                     <i class="fa fa-question-circle"></i>
                 </label>
             </span>
@@ -182,7 +182,7 @@
                 <input ng-disabled="readOnly" ng-checked="model.permissions.security_analytics.access" type="checkbox" name="permissions_sec_analytics"
                     class="inline-block bg-dark" ng-model="model.permissions.security_analytics.access"> Security Analytics
                 <label for="permissions_sec_analytics" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                    uib-popover="Allow group to access security analytics.">
+                    uib-popover="Allow users to access security analytics.">
                     <i class="fa fa-question-circle"></i>
                 </label>
             </span>
@@ -213,7 +213,7 @@
                 <input ng-disabled="readOnly" ng-checked="model.permissions.dns_zones.access" type="checkbox" name="permissions_dns_zones"
                     class="inline-block bg-dark" ng-model="model.permissions.dns_zones.access"> DNS Zones
                 <label for="permissions_dns_zones" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                    uib-popover="Allow group to access DNS Zones.">
+                    uib-popover="Allow users to access DNS Zones.">
                     <i class="fa fa-question-circle"></i>
                 </label>
             </span>
@@ -243,7 +243,7 @@
             <span class="{{model.permissions.accounts.access ? 'bg-dark' : null}}">
                 <input ng-disabled="readOnly" ng-checked="model.permissions.accounts.access" type="checkbox" name="permissions_accounts"
                     class="inline-block bg-dark" ng-model="model.permissions.accounts.access"> Accounts
-                <label for="permissions_accounts" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Allow group to access accounts.">
+                <label for="permissions_accounts" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Allow users to access accounts.">
                     <i class="fa fa-question-circle"></i>
                 </label>
             </span>
@@ -273,7 +273,7 @@
             <input ng-disabled="readOnly" ng-checked="model.permissions.ssl_names" type="checkbox" name="permissions_ssl_names" class="inline-block"
                 ng-model="model.permissions.ssl_names"> SSL Names
             <label for="permissions_ssl_names" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow group to manage SSL Names.">
+                uib-popover="Allow users to manage SSL Names.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
@@ -281,7 +281,7 @@
             <input ng-disabled="readOnly" ng-checked="model.permissions.ssl_certs" type="checkbox" name="permissions_ssl_certs" class="inline-block"
                 ng-model="model.permissions.ssl_certs"> SSL Certificates
             <label for="permissions_ssl_certs" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow group to manage SSL Certs.">
+                uib-popover="Allow users to manage SSL Certs.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
@@ -289,7 +289,7 @@
             <input ng-disabled="readOnly" ng-checked="model.permissions.waf_rules" type="checkbox" name="permissions_waf_rules" class="inline-block"
                 ng-model="model.permissions.waf_rules"> WAF Rules
             <label for="permissions_waf_rules" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow group to manage WAF Rules.">
+                uib-popover="Allow users to manage WAF Rules.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
@@ -297,28 +297,28 @@
             <input ng-disabled="readOnly" ng-checked="model.permissions.dns_analytics" type="checkbox" name="permissions_dns_analytics"
                 class="inline-block" ng-model="model.permissions.dns_analytics"> DNS Analytics
             <label for="permissions_dns_analytics" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow group to access DNS Analytics.">
+                uib-popover="Allow users to access DNS Analytics.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
         <div class="col-sm-6">
             <input ng-disabled="readOnly" ng-checked="model.permissions.groups" type="checkbox" name="permissions_groups" class="inline-block"
                 ng-model="model.permissions.groups"> Groups
-            <label for="permissions_groups" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Allow group to manage groups.">
+            <label for="permissions_groups" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Allow users to manage groups.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
         <div class="col-sm-6">
             <input ng-disabled="readOnly" ng-checked="model.permissions.users" type="checkbox" name="permissions_users" class="inline-block"
                 ng-model="model.permissions.users"> Users
-            <label for="permissions_users" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Allow group to manage users.">
+            <label for="permissions_users" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Allow users to manage users.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
         <div class="col-sm-6">
             <input ng-disabled="readOnly" ng-checked="model.permissions.API_keys" type="checkbox" name="permissions_API_keys" class="inline-block"
                 ng-model="model.permissions.API_keys"> API Keys
-            <label for="permissions_API_keys" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Allow group to manage API Keys.">
+            <label for="permissions_API_keys" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Allow users to manage API Keys.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
@@ -326,7 +326,7 @@
             <input ng-disabled="readOnly" ng-checked="model.permissions.logshipping_jobs" type="checkbox" name="permissions_logshipping_jobs"
                 class="inline-block" ng-model="model.permissions.logshipping_jobs"> Logshipping Jobs
             <label for="permissions_logshipping_jobs" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow group to manage logshipping jobs.">
+                uib-popover="Allow users to manage logshipping jobs.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
@@ -334,7 +334,7 @@
             <input ng-disabled="readOnly" ng-checked="model.permissions.activity_log" type="checkbox" name="permissions_activity_log"
                 class="inline-block" ng-model="model.permissions.activity_log"> Activity Log
             <label for="permissions_activity_log" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow group to access activity log.">
+                uib-popover="Allow users to access activity log.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
@@ -342,7 +342,7 @@
             <input ng-disabled="readOnly" ng-checked="model.permissions.traffic_alerts" type="checkbox" name="permissions_traffic_alerts"
                 class="inline-block" ng-model="model.permissions.traffic_alerts"> Traffic Alerts
             <label for="permissions_traffic_alerts" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow group to access traffic alerts.">
+                uib-popover="Allow users to access traffic alerts.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
@@ -350,7 +350,7 @@
             <input ng-disabled="readOnly" ng-checked="model.permissions.notification_lists" type="checkbox" name="permissions_notification_lists"
                 class="inline-block" ng-model="model.permissions.notification_lists"> Notification Lists
             <label for="permissions_notification_lists" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow group to access notification lists.">
+                uib-popover="Allow users to access notification lists.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
@@ -358,7 +358,7 @@
             <input ng-disabled="readOnly" ng-checked="model.permissions.usage_reports" type="checkbox" name="permissions_usage_reports"
                 class="inline-block" ng-model="model.permissions.usage_reports"> Usage Reports
             <label for="permissions_usage_reports" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow group to access usage reports.">
+                uib-popover="Allow users to access usage reports.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
@@ -366,7 +366,7 @@
             <input ng-disabled="readOnly" ng-checked="model.permissions.billing_statements" type="checkbox" name="permissions_billing_statements"
                 class="inline-block" ng-model="model.permissions.billing_statements"> Billing Statements
             <label for="permissions_billing_statements" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow group to access billing statemnets.">
+                uib-popover="Allow users to access billing statemnets.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
@@ -374,7 +374,7 @@
             <input ng-disabled="readOnly" ng-checked="model.permissions.billing_plan" type="checkbox" name="permissions_billing_plan"
                 class="inline-block" ng-model="model.permissions.billing_plan"> Billing Plans
             <label for="permissions_billing_plan" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow group to access billing plans.">
+                uib-popover="Allow users to access billing plans.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
