Dashboards access to fixed

--- a/code/dev/parts/dashboard/dashboard-nav-menu.tpl.html
+++ b/code/dev/parts/dashboard/dashboard-nav-menu.tpl.html
@@ -1,4 +1,4 @@
-<li id="left-menu-dashboard-section" class="dashboard_menu list" ui-sref-active-if="{class: 'open-side-menu-item', state: 'index.dashboard'}"
+<li ng-if="userService.hasAccessTo('dashboards')" id="left-menu-dashboard-section" class="dashboard_menu list" ui-sref-active-if="{class: 'open-side-menu-item', state: 'index.dashboard'}"
     ng-class="{'open-side-menu-item': menuExpanded('index.dashboard'),'active-side-menu-item': $state.includes('index.dashboard')}">
     <a id="side-menu-dashboard-item" class="side-menu-item" ng-if="vm.dashboardsList.length>0" ng-click="goToState('dashboard', vm.dashboardsList[0].id)">
         <div class="left-menu-start" style="margin-right: 3px;">
